--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
 
-main {
-    background-color: lightcoral;
-}
+// main {
+//     background-color: lightcoral;
+// }
